[package]
name = "rusty-leaf-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.31"
dotenv = "0.15.0"
jsonwebtoken = "9.2.0"
rocket = {version = "0.5.0", features = ["json"]}
serde = "1.0.195"
shuttle-rocket = "0.36.0"
shuttle-runtime = "0.36.0"
tokio = "1.26.0"
[dependencies.mongodb]
version = "2.8.0"
default-features = false
features = ["sync"]
